--- a/style.css
+++ b/style.css
@@ -4,14 +4,23 @@
   }
   
   .container {
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
   }
   
   .picture-explanation-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .horiz {
+    display: flex;
+    align-items: center;
   }
   
   #picture {
@@ -19,7 +28,15 @@
     margin-right: 1rem;
   }
   
-  #explanation {
+  #expl {
     letter-spacing: 0px;
     line-height: 20px;
+    font-weight: 900;
   }
+
+  button {
+    width: 50px;
+    height: 25px;
+    margin: 30px;
+  }
+
