--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   .horiz {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
   
   #picture {
@@ -35,7 +36,7 @@
   }
 
   button {
-    width: 50px;
+    width: 65px;
     height: 25px;
     margin: 30px;
   }
